// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnitInputField > should handles onChange and selection 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-7 {
  color: #b3144d;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background-color: #ffffff;
}

.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-12,
.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active>.emotion-12 {
  border-right-color: #8c40ef;
}

.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within {
  border-color: #792dd4;
}

.emotion-9:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within>.emotion-12 {
  border-right-color: #8c40ef;
}

.emotion-9:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-9:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-9:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-12,
.emotion-9:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-12 {
  border-right-color: #8c40ef;
}

.emotion-9[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-9[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-9[data-size='small'] {
  height: 2rem;
}

.emotion-9[data-size='medium'] {
  height: 2.5rem;
}

.emotion-9[data-size='large'] {
  height: 3rem;
}

.emotion-9[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-9[data-success='true']>.emotion-12 {
  border-right-color: #22674e;
}

.emotion-9[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-9[data-success='true']:active>.emotion-12 {
  border-right-color: #22674e;
}

.emotion-9[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-9[data-error='true']>.emotion-12 {
  border-right-color: #b3144d;
}

.emotion-9[data-error='true']>.emotion-12:hover {
  border-right-color: #b3144d;
}

.emotion-9[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-9[data-error='true']:active>.emotion-12 {
  border-right-color: #b3144d;
}

.emotion-9[data-error='true']:active>.emotion-12:hover {
  border-right-color: #b3144d;
}

.emotion-9[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-9[data-disabled='true']>.emotion-12 {
  border-right-color: #e9eaeb;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 1rem;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  color: #3f4250;
  font-size: 0.875rem;
}

.emotion-13[data-size="small"] {
  padding-left: 0.5rem;
}

<<<<<<< HEAD
.emotion-12[data-size="large"] {
  font-size: 1rem;
}

.emotion-12::-webkit-input-placeholder {
=======
.emotion-13::-webkit-input-placeholder {
>>>>>>> 20ec5b032 (feat: add more features)
  color: #727683;
}

.emotion-13::-moz-placeholder {
  color: #727683;
}

.emotion-13:-ms-input-placeholder {
  color: #727683;
}

.emotion-13::placeholder {
  color: #727683;
}

.emotion-13:disabled {
  cursor: not-allowed;
}

.emotion-13:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-13:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-13:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-13:disabled::placeholder {
  color: #b5b7bd;
}

<<<<<<< HEAD
.emotion-14 {
=======
.emotion-16 {
  width: 100%;
>>>>>>> 20ec5b032 (feat: add more features)
  width: 12.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<<<<<<< HEAD
.emotion-17 {
  width: 100%;
}

.emotion-17 #unit {
=======
.emotion-16 #unit {
>>>>>>> 20ec5b032 (feat: add more features)
  border: none;
  background: transparent;
}

<<<<<<< HEAD
.emotion-17 #unit:focus,
.emotion-17 #unit:active {
  box-shadow: none;
}

.emotion-19 {
  display: inherit;
}

.emotion-19[data-container-full-width="true"] {
  width: 100%;
}

.emotion-23 {
=======
.emotion-16 #unit:focus,
.emotion-16 #unit:active {
  box-shadow: none;
}

.emotion-18 {
  display: inherit;
}

.emotion-18[data-container-full-width="true"] {
  width: 100%;
}

.emotion-22 {
>>>>>>> 20ec5b032 (feat: add more features)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
  overflow: hidden;
}

<<<<<<< HEAD
.emotion-23[data-size='small'] {
=======
.emotion-22[data-size='small'] {
>>>>>>> 20ec5b032 (feat: add more features)
  height: 2rem;
  padding-left: 0.5rem;
}

<<<<<<< HEAD
.emotion-23[data-size='medium'] {
  height: 2.5rem;
}

.emotion-23[data-size='large'] {
  height: 3rem;
}

.emotion-23[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-23[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
=======
.emotion-22[data-size='medium'] {
  height: 2.5rem;
}

.emotion-22[data-size='large'] {
  height: 3rem;
}

.emotion-22[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-22[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
>>>>>>> 20ec5b032 (feat: add more features)
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

<<<<<<< HEAD
.emotion-23[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-23[data-state='neutral']:not([data-disabled='true']):focus {
=======
.emotion-22[data-state='neutral']:not([data-disabled='true']):hover {
>>>>>>> 20ec5b032 (feat: add more features)
  border-color: #792dd4;
  outline: none;
}

<<<<<<< HEAD
.emotion-23[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-23[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-23[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
=======
.emotion-22[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-22[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-22[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-22[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
>>>>>>> 20ec5b032 (feat: add more features)
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

<<<<<<< HEAD
.emotion-23[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-23[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-23[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
=======
.emotion-22[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-22[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-22[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
>>>>>>> 20ec5b032 (feat: add more features)
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

<<<<<<< HEAD
.emotion-23[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-23:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-23[data-readonly='true'] {
=======
.emotion-22[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-22:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-22[data-readonly='true'] {
>>>>>>> 20ec5b032 (feat: add more features)
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

<<<<<<< HEAD
.emotion-23[data-disabled='true'] {
=======
.emotion-22[data-disabled='true'] {
>>>>>>> 20ec5b032 (feat: add more features)
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

<<<<<<< HEAD
.emotion-26 {
=======
.emotion-25 {
>>>>>>> 20ec5b032 (feat: add more features)
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

<<<<<<< HEAD
.emotion-28 {
=======
.emotion-27 {
>>>>>>> 20ec5b032 (feat: add more features)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<<<<<<< HEAD
.emotion-30 {
=======
.emotion-29 {
>>>>>>> 20ec5b032 (feat: add more features)
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

<<<<<<< HEAD
.emotion-30 .fillStroke {
=======
.emotion-29 .fillStroke {
>>>>>>> 20ec5b032 (feat: add more features)
  stroke: #3f4250;
  fill: none;
}

<<<<<<< HEAD
.emotion-32 {
=======
.emotion-31 {
>>>>>>> 20ec5b032 (feat: add more features)
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 3rem;
  padding: 0 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

<<<<<<< HEAD
.emotion-32:hover {
=======
.emotion-31:hover {
>>>>>>> 20ec5b032 (feat: add more features)
  -webkit-text-decoration: none;
  text-decoration: none;
}

<<<<<<< HEAD
.emotion-32:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-32:hover,
.emotion-32:active {
=======
.emotion-31:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-31:hover,
.emotion-31:active {
>>>>>>> 20ec5b032 (feat: add more features)
  background: #792dd4;
  color: #f9f9fa;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <div
          class="emotion-2 emotion-1"
        >
          <label
            class="emotion-4 emotion-5 emotion-6"
            for=":r6:"
          >
            Test
          </label>
          <span
            class="emotion-7 emotion-6"
          >
            *
          </span>
        </div>
        <div
          class="emotion-9 emotion-10"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
          data-success="false"
        >
          <div
            class="emotion-11 emotion-12"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-13 emotion-14"
              data-size="large"
              data-testid="unit-input"
              id=":r6:"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="input"
              required=""
              step="1"
              type="number"
              value="100"
            />
          </div>
           
          <div
<<<<<<< HEAD
            class="emotion-14 emotion-15"
            width="12.6rem"
          >
            <div
              aria-label="test-unit"
              class="emotion-16 emotion-17 emotion-18"
=======
            aria-label="test-unit"
            class="emotion-15 emotion-16 emotion-17"
          >
            <div
              aria-controls=":ra:"
              aria-describedby=":ra:"
              class="emotion-18 emotion-19"
              data-container-full-width="true"
              tabindex="-1"
>>>>>>> 20ec5b032 (feat: add more features)
            >
              <div
                aria-controls=":ra:"
                aria-describedby=":ra:"
                class="emotion-19 emotion-20"
                data-container-full-width="true"
                tabindex="0"
              >
                <div
<<<<<<< HEAD
                  class="emotion-0 emotion-1"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    class="emotion-23 emotion-24"
                    data-disabled="false"
                    data-dropdownvisible="false"
                    data-readonly="false"
                    data-size="large"
                    data-state="neutral"
                    data-testid="select-input-test-unit"
                    id="unit"
                    role="combobox"
                    tabindex="0"
                  >
                    <div
                      class="emotion-25 emotion-26 emotion-5"
=======
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="emotion-22 emotion-23"
                  data-disabled="false"
                  data-dropdownvisible="false"
                  data-readonly="false"
                  data-size="large"
                  data-state="neutral"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <div
                    class="emotion-24 emotion-25 emotion-6"
                  >
                    Days
                  </div>
                  <div
                    class="emotion-27 emotion-28"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="emotion-29 emotion-30"
                      viewBox="0 0 20 20"
>>>>>>> 20ec5b032 (feat: add more features)
                    >
                      Days
                    </div>
                    <div
                      class="emotion-28 emotion-29"
                    >
                      <svg
                        aria-label="show dropdown"
                        class="emotion-30 emotion-31"
                        viewBox="0 0 20 20"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M5.47 7.47a.75.75 0 0 1 1.06 0l3.72 3.72 3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.47 8.53a.75.75 0 0 1 0-1.06"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
<<<<<<< HEAD
        class="emotion-32 emotion-33"
=======
        class="emotion-31 emotion-32"
>>>>>>> 20ec5b032 (feat: add more features)
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`UnitInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background-color: #ffffff;
}

.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-8,
.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active>.emotion-8 {
  border-right-color: #8c40ef;
}

.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within {
  border-color: #792dd4;
}

.emotion-5:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within>.emotion-8 {
  border-right-color: #8c40ef;
}

.emotion-5:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-5:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-5:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-8,
.emotion-5:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-8 {
  border-right-color: #8c40ef;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-5[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-5[data-size='small'] {
  height: 2rem;
}

.emotion-5[data-size='medium'] {
  height: 2.5rem;
}

.emotion-5[data-size='large'] {
  height: 3rem;
}

.emotion-5[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-5[data-success='true']>.emotion-8 {
  border-right-color: #22674e;
}

.emotion-5[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-5[data-success='true']:active>.emotion-8 {
  border-right-color: #22674e;
}

.emotion-5[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-5[data-error='true']>.emotion-8 {
  border-right-color: #b3144d;
}

.emotion-5[data-error='true']>.emotion-8:hover {
  border-right-color: #b3144d;
}

.emotion-5[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-5[data-error='true']:active>.emotion-8 {
  border-right-color: #b3144d;
}

.emotion-5[data-error='true']:active>.emotion-8:hover {
  border-right-color: #b3144d;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-5[data-disabled='true']>.emotion-8 {
  border-right-color: #e9eaeb;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 1rem;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  color: #3f4250;
  font-size: 0.875rem;
}

.emotion-9[data-size="small"] {
  padding-left: 0.5rem;
}

<<<<<<< HEAD
.emotion-8[data-size="large"] {
  font-size: 1rem;
}

.emotion-8::-webkit-input-placeholder {
=======
.emotion-9::-webkit-input-placeholder {
>>>>>>> 20ec5b032 (feat: add more features)
  color: #727683;
}

.emotion-9::-moz-placeholder {
  color: #727683;
}

.emotion-9:-ms-input-placeholder {
  color: #727683;
}

.emotion-9::placeholder {
  color: #727683;
}

.emotion-9:disabled {
  cursor: not-allowed;
}

.emotion-9:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-9:disabled::placeholder {
  color: #b5b7bd;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-12 {
  width: 100%;
>>>>>>> 20ec5b032 (feat: add more features)
  width: 12.6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<<<<<<< HEAD
.emotion-13 {
  width: 100%;
}

.emotion-13 #unit {
=======
.emotion-12 #unit {
>>>>>>> 20ec5b032 (feat: add more features)
  border: none;
  background: transparent;
}

<<<<<<< HEAD
.emotion-13 #unit:focus,
.emotion-13 #unit:active {
  box-shadow: none;
}

.emotion-15 {
  display: inherit;
}

.emotion-15[data-container-full-width="true"] {
  width: 100%;
}

.emotion-19 {
=======
.emotion-12 #unit:focus,
.emotion-12 #unit:active {
  box-shadow: none;
}

.emotion-14 {
  display: inherit;
}

.emotion-14[data-container-full-width="true"] {
  width: 100%;
}

.emotion-18 {
>>>>>>> 20ec5b032 (feat: add more features)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
  overflow: hidden;
}

<<<<<<< HEAD
.emotion-19[data-size='small'] {
=======
.emotion-18[data-size='small'] {
>>>>>>> 20ec5b032 (feat: add more features)
  height: 2rem;
  padding-left: 0.5rem;
}

<<<<<<< HEAD
.emotion-19[data-size='medium'] {
  height: 2.5rem;
}

.emotion-19[data-size='large'] {
  height: 3rem;
}

.emotion-19[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-19[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
=======
.emotion-18[data-size='medium'] {
  height: 2.5rem;
}

.emotion-18[data-size='large'] {
  height: 3rem;
}

.emotion-18[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-18[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
>>>>>>> 20ec5b032 (feat: add more features)
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

<<<<<<< HEAD
.emotion-19[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-19[data-state='neutral']:not([data-disabled='true']):focus {
=======
.emotion-18[data-state='neutral']:not([data-disabled='true']):hover {
>>>>>>> 20ec5b032 (feat: add more features)
  border-color: #792dd4;
  outline: none;
}

<<<<<<< HEAD
.emotion-19[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-19[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-19[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
=======
.emotion-18[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-18[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-18[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-18[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
>>>>>>> 20ec5b032 (feat: add more features)
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

<<<<<<< HEAD
.emotion-19[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-19[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-19[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
=======
.emotion-18[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-18[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-18[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
>>>>>>> 20ec5b032 (feat: add more features)
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

<<<<<<< HEAD
.emotion-19[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-19:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-19[data-readonly='true'] {
=======
.emotion-18[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-18:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-18[data-readonly='true'] {
>>>>>>> 20ec5b032 (feat: add more features)
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

<<<<<<< HEAD
.emotion-19[data-disabled='true'] {
=======
.emotion-18[data-disabled='true'] {
>>>>>>> 20ec5b032 (feat: add more features)
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

<<<<<<< HEAD
.emotion-22 {
=======
.emotion-21 {
>>>>>>> 20ec5b032 (feat: add more features)
  color: #727683;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<<<<<<< HEAD
.emotion-24 {
=======
.emotion-23 {
>>>>>>> 20ec5b032 (feat: add more features)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<<<<<<< HEAD
.emotion-26 {
=======
.emotion-25 {
>>>>>>> 20ec5b032 (feat: add more features)
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

<<<<<<< HEAD
.emotion-26 .fillStroke {
=======
.emotion-25 .fillStroke {
>>>>>>> 20ec5b032 (feat: add more features)
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
      >
        <label
          class="emotion-2 emotion-3 emotion-4"
          for=":r0:"
        >
          Test
        </label>
        <div
          class="emotion-5 emotion-6"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
          data-success="false"
        >
          <div
            class="emotion-7 emotion-8"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-9 emotion-10"
              data-size="large"
              data-testid="unit-input"
              id=":r0:"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="0"
              step="1"
              type="number"
            />
          </div>
           
          <div
<<<<<<< HEAD
            class="emotion-10 emotion-11"
            width="12.6rem"
          >
            <div
              aria-label="test-unit"
              class="emotion-12 emotion-13 emotion-14"
=======
            aria-label="test-unit"
            class="emotion-11 emotion-12 emotion-13"
          >
            <div
              aria-controls=":r3:"
              aria-describedby=":r3:"
              class="emotion-14 emotion-15"
              data-container-full-width="true"
              tabindex="-1"
>>>>>>> 20ec5b032 (feat: add more features)
            >
              <div
                aria-controls=":r3:"
                aria-describedby=":r3:"
                class="emotion-15 emotion-16"
                data-container-full-width="true"
                tabindex="0"
              >
                <div
<<<<<<< HEAD
                  class="emotion-0 emotion-1"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    class="emotion-19 emotion-20"
                    data-disabled="false"
                    data-dropdownvisible="false"
                    data-readonly="false"
                    data-size="large"
                    data-state="neutral"
                    data-testid="select-input-test-unit"
                    id="unit"
                    role="combobox"
                    tabindex="0"
                  >
                    <p
                      class="emotion-21 emotion-22 emotion-3"
=======
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="emotion-18 emotion-19"
                  data-disabled="false"
                  data-dropdownvisible="false"
                  data-readonly="false"
                  data-size="large"
                  data-state="neutral"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <p
                    class="emotion-20 emotion-21 emotion-4"
                  >
                    Select item
                  </p>
                  <div
                    class="emotion-23 emotion-24"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="emotion-25 emotion-26"
                      viewBox="0 0 20 20"
>>>>>>> 20ec5b032 (feat: add more features)
                    >
                      Select item
                    </p>
                    <div
                      class="emotion-24 emotion-25"
                    >
                      <svg
                        aria-label="show dropdown"
                        class="emotion-26 emotion-27"
                        viewBox="0 0 20 20"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M5.47 7.47a.75.75 0 0 1 1.06 0l3.72 3.72 3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.47 8.53a.75.75 0 0 1 0-1.06"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
